// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizes 1`] = `
Array [
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 3,
    "kind": "Punctuator",
    "line": 1,
    "value": "...",
  },
  Object {
    "col": 3,
    "kind": "Punctuator",
    "line": 1,
    "value": "[",
  },
  Object {
    "col": 4,
    "kind": "Punctuator",
    "line": 1,
    "value": "]",
  },
]
`;

exports[`tokenizes 2`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 3,
    "kind": "Punctuator",
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 3`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 3,
    "kind": "IntValue",
    "line": 1,
    "value": "5",
  },
  Object {
    "col": 3,
    "kind": "Punctuator",
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 4,
    "kind": "Punctuator",
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 4`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 3,
    "kind": "FloatValue",
    "line": 1,
    "value": "-5.4e+3",
  },
  Object {
    "col": 3,
    "kind": "Punctuator",
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 4,
    "kind": "Punctuator",
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 5`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 3,
    "kind": "StringValue",
    "line": 1,
    "value": "what up",
  },
  Object {
    "col": 3,
    "kind": "Punctuator",
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 4,
    "kind": "Punctuator",
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 6`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 3,
    "kind": "StringValue",
    "line": 1,
    "value": "	what up",
  },
  Object {
    "col": 3,
    "kind": "Punctuator",
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 4,
    "kind": "Punctuator",
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 7`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 2,
    "kind": "Punctuator",
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 3,
    "kind": "StringValue",
    "line": 1,
    "value": "\\" up",
  },
  Object {
    "col": 3,
    "kind": "Punctuator",
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 4,
    "kind": "Punctuator",
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 8`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 3,
    "kind": "Name",
    "line": 2,
    "value": "x",
  },
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 3,
    "value": "}",
  },
]
`;

exports[`tokenizes 9`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 2,
    "kind": "Name",
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 4,
    "kind": "Punctuator",
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 10`] = `
Array [
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 3,
    "kind": "Name",
    "line": 3,
    "value": "x",
  },
  Object {
    "col": 1,
    "kind": "Punctuator",
    "line": 4,
    "value": "}",
  },
]
`;
